# FlappyBird

./: .gitignore  CMakeLists.txt  Flappy Bird SFML.sln  Makefile  README.md  main.cpp
Flappy Bird SFML/: Definitions.h  Flappy Bird SFML.vcxproj  Flappy Bird SFML.vcxproj.filters  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  QuadTree.cpp  QuadTree.h  main.cpp
src/: Button.cpp  Button.hpp  Collision.cpp  Collision.hpp  Common.cpp  Common.hpp  Definitions.h  Definitions.hpp  Game.cpp  Game.hpp  GameScreen.cpp  GameScreen.h  GameScreen.hpp  GameState.hpp  MenuScreen.cpp  MenuScreen.h  MenuScreen.hpp  Obstacle.cpp  Obstacle.h  Obstacle.hpp  Player.cpp  Player.hpp  QuadTree.cpp  QuadTree.h  QuadTree.hpp  main.cpp
src/cpp/: Button.cpp  Common.cpp  Game.cpp  GameScreen.cpp  MenuScreen.cpp  Obstacle.cpp  Player.cpp  SettingsOverlay.cpp  SpriteButton.cpp  main.cpp
src/hpp/: Button.hpp  Definitions.hpp  Difficulty.hpp  Game.hpp  GameScreen.hpp  MenuScreen.hpp  Obstacle.hpp  Player.hpp  QuadTree.hpp  Screens.hpp  SettingsOverlay.hpp  SpriteButton.hpp
